# HttpEngine

./: .gitignore  CMakeLists.txt  README.md  main.cpp
inc/: common.h
inc/Core/: IOManager.h  WorkerManager.h
src/Core/: IOManager.cpp  WorkerManager.cpp
